force-app/main/default/objects/redwing__Training_Plan_Batch_Operation__c/redwing__Training_Plan_Batch_Operation__c.object-meta.xml
<CustomObject>
    <label>Learning Plan Batch Operation</label>
    <nameField>
        <displayFormat>LPBO-{0000000}</displayFormat>
        <label>Learning Plan Batch Operation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Plan Batch Operations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>