force-app/main/default/objects/redwing__Training_Plan_Batch_Operation__c/fields/redwing__Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>redwing__Additional_Information__c</fullName>
    <label>Additional Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>