force-app/main/default/objects/redwing__Training_Plan_Batch_Operation__c/fields/redwing__Training_Plan__c.field-meta.xml
<CustomField>
    <fullName>redwing__Training_Plan__c</fullName>
    <label>Learning Plan</label>
    <referenceTo>redwing__Training_Plan__c</referenceTo>
    <relationshipLabel>Learning Plan Batch Operations</relationshipLabel>
    <relationshipName>Training_Plan_Batch_Operations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>