force-app/main/default/objects/redwing__Training_Plan_Batch_Operation__c/fields/redwing__Type__c.field-meta.xml
<CustomField>
    <fullName>redwing__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Upsert Assignments</fullName>
            </value>
            <value>
                <fullName>Delete Assignments</fullName>
            </value>
            <value>
                <fullName>Update Assignments</fullName>
            </value>
            <value>
                <fullName>Re-calculate Assignments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>